Added support for TCP in Probe (https://issues.jboss.org/browse/JGRP-2336)